examples/pass/unit.uplp
-- test: check { "type": "Unit", "value": {} }
()