examples/fail/type_mismatch.uplp
-- test: error { "category": "Type.mismatch", "metadata": { "t1": "Unit", "t2": "Num" } }
1 + ()